# kv-manager

./: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.ts
server/: .env  .env.prod  .gitignore  pyproject.toml
server/app/: main.py
server/app/api/: deps.py  main.py
server/app/api/routes/: common.py  feishu.py  kv.py
server/app/common/: config.py
server/app/core/: config.py  db.py
server/app/models/: kv_items.py  response.py  sql_models.py
server/app/utils/: crud.py  feishu_auth.py  feishu_helper.py  kv_helper.py  resource.py
src/: App.vue  main.ts
src/client/: schemas.gen.ts  services.gen.ts  types.gen.ts
src/components/kv/: KvAllEmpty.vue  KvMain.vue  KvMergeCheck.vue  LangSelect.vue  SiderBar.vue  ToolSider.vue
src/components/kv/Tools/: AddNewKv.vue  CheckAllEmpty.vue  DeleteLang.vue  DownloadSelect.vue  DownloadZip.vue  UploadMerge.vue  UploadNewLang.vue
src/components/kv/dialogs/: AddNewKvDialog.vue  CreateBucketDialog.vue  KvHisDialog.vue
src/components/providers/: RootProvider.vue
src/stores/: kv.ts
src/views/: HomeView.vue
