[tool.poetry]
name = "kv"
version = "0.1.0"
description = ""
authors = ["Star-tears <star-tears@outlook.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
pydantic-settings = "^2.2.1"
sqlmodel = "^0.0.18"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
